[package]
name = "mobile"
version = "0.1.2"
edition = "2021"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
reflector_emulator_3d = { path = ".." } # ToDo
bevy = { version = "0.15", default-features = false, features = ["android-native-activity"] }

[target."cfg(target_os = \"ios\")".dependencies]
objc2-avf-audio = { version = "0.3.0", features = [
    "AVAudioSession",
    "AVAudioSessionTypes",
] }

# See https://github.com/bevyengine/bevy/pull/12052
[target.aarch64-apple-ios-sim.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "ios_simulator",
] }

[package.metadata.android]
package = "cn.astro_xao.reflector_emulator_3d"  # ToDo
apk_name = "ReflectorEmulator3d"  # ToDo same as GAME_OSX_APP_NAME in release workflow
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Reflector Emulator 3D" # ToDo
